--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,54 @@
 /* место для вашего кода */
+
+.header {
+  display: grid;
+  grid-template: auto / 1fr auto 1fr;
+  align-items: center;
+  margin: 92px 50px;
+  font-size: 18px;
+}
+
+.header-menu {
+}
+
+.header__links-list {
+  display: flex;
+  list-style: circle;
+}
+
+.header__links-list-item {
+  margin: 0 16px;
+}
+
+.header__links-list-item:first-child {
+    margin-left: 0;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  border-bottom: 1px solid black;
+}
+
+.header__link_active {
+  border-bottom: none;
+}
+
+.header__logo {
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+}
+
+.address {
+  width: 240px;
+  justify-self: end;
+  font-style: normal;
+}
+
+.header__address {
+}
