--- a/styles/style.css
+++ b/styles/style.css
@@ -199,3 +199,49 @@
   margin-top: 30px;
   margin-left: 40px;
 }
+
+.about {
+  margin: 0 50px 180px;
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  grid-template-rows: repeat(3, auto);
+  column-gap: 25px;
+}
+
+.about__logo {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  padding: 63px 46px;
+  border-radius: 120px;
+  justify-self: center;
+}
+
+.about__logo-img {
+  /* Не использовала */
+}
+
+.about__title {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+  align-self: center;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+}
+
+.first {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  margin-bottom: 25px;
+}
+
+.second {  
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
