--- a/styles/style.css
+++ b/styles/style.css
@@ -1,56 +1,63 @@
-/* место для вашего кода */
+/* Header Styles */
 
 .header {
   display: grid;
   grid-template: auto / 1fr auto 1fr;
-  align-items: center;
-  margin: 92px 50px;
+  height: 109px;
+  margin: 92px 49px 92px 51px; /* Взято из макета. Уточнить с дизайнером ассиметрию справа и слева: идея или ошибка. Оставила для Pixel Perfect. */
   font-size: 18px;
 }
 
 .header-menu {
+  align-self: center;
 }
 
 .header__links-list {
   display: flex;
-  list-style: circle;
+  column-gap: 32px;
 }
 
 .header__links-list-item {
-  margin: 0 16px;
-}
-
-.header__links-list-item:first-child {
-    margin-left: 0;
+  list-style-type: circle;
+  list-style-position: 12px;
 }
 
 .header__links-list-item_no-bullit {
-  list-style: none;
+  list-style-type: none;
 }
 
 .header__link {
-  border-bottom: 1px solid black;
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 .header__link_active {
-  border-bottom: none;
+  text-decoration: none;
 }
 
 .header__logo {
+  display: block;
   width: 148px;
   height: 105px;
 }
 
 .header__logo-image {
+  /* Не использовала */
 }
 
 .address {
   width: 240px;
-  justify-self: end;
+  margin-top: 5px;
   font-style: normal;
+  line-height: 135%;
+}
+
+.address a {
+  text-underline-offset: 4px;
 }
 
 .header__address {
+  justify-self: flex-end;
 }
 
 /* Cover styles */
