--- a/styles/style.css
+++ b/styles/style.css
@@ -64,68 +64,82 @@
 
 .cover {
   background-image: url(../images/cover.jpg);
-  height: 757px;  
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 757px;
   color: #fff;
   position: relative;
   text-transform: uppercase;
+  margin: 0 0 180px;
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.6);  
-  width: 100%;
-  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  inset: 0;
 }
 
 .cover__title {
-    font-size: 100px;
-    font-weight: bold;
-    letter-spacing: 30px;
-    position: absolute;
-    inset: 165px 50px auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  padding: 165px 50px 135px;
+  font-size: 100px;
+  font-weight: bold;
+  letter-spacing: 30px;
 }
 
 .aligned-text {
-    display: block;
+  display: block;
 }
 
 .aligned-text_center {
-    text-align: center;
+  text-align: center;  
 }
 
-.aligned-text_right{
-    text-align: end;
+.aligned-text_right {
+  text-align: end; 
+}
+
+.line-hight-high {
+  line-height: 1.15;
+}
+
+.line-hight-low {
+  line-height: 1;
 }
 
 .letter-spacing-extended {
-    letter-spacing: 60px;
+  letter-spacing: 60px;
 }
 
 .no-letter-spacing {
-    letter-spacing: normal;
+  letter-spacing: normal;
 }
 
 .cover__description {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    column-gap: 78px;
-    position: absolute;
-    inset: auto 50px 50px 50px; /* Значение для левой границы блока взято симметрично. Выравнивание вложенных элементов не прявязано к левому краю. */
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  column-gap: 78px;
+  padding: 0 50px 0 0;
 }
 
 .cover__description-text {
-    font-weight: normal;
-    font-size: 22px;
-    word-spacing: 19px;
+  font-weight: normal;
+  font-size: 22px;
+  word-spacing: 18px;
 }
 
 .bet-button {
-    background: none;
-    border: 1px solid #fff;
-    color: inherit;
-    text-transform: uppercase;
-    padding: 12px 32px;
-    font-size: 22px;
+  background: none;
+  border: 1px solid #fff;
+  color: inherit;
+  text-transform: uppercase;
+  padding: 12px 32px;
+  font-size: 22px;
 }
 
 .lots {
