Lots fixes: empty hrefs in links added, heading margin added, card space in the list reserved, images sizing fixed, underline fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,8 @@
   font-size: 22px;
 }
 
+/* Lots styles */
+
 .lots {
   margin: 0 50px 181px;
 }
@@ -150,75 +152,71 @@
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 27px;
+  margin: 0 0 27px 40px;
 }
 
 .lots__card-list {
   color: #fff;
   display: flex;
-  column-gap: 25px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 25px;
 }
 
 .lots__card-list-item {
+  display: block;
+  width: 430px;
+  flex-grow: 1;
+  min-height: 450px;
 }
 
 .card-link {
-  display: block;
+  text-decoration: none;
 }
 
 .card {
+  height: 100%;
   position: relative;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 450px;
-  min-width: 430px;
   padding: 50px 40px;
-}
-
-.overlay-new {
-  background-color: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  inset: 0;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: contain;
+  background-size: cover;
 }
 
 .card_type_book {
-    background-image: url(../images/card-lot-02.jpg);
-    background-size: contain;
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
 }
 
 .card_type_picture {
-    background-image: url(../images/card-lot-03.jpg);
-    background-size: contain;
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
 }
 
 .card__title {
   position: relative;
-  z-index: 1;
   font-size: 22px;
   text-transform: uppercase;
-  text-decoration: underline;
-  font-weight: normal;
+  text-decoration: underline 1px;
+  text-underline-offset: 3px;
 }
 
 .card__text {
   position: relative;
-  z-index: 1;
   font-size: 20px;
 }
 
 .lots__look-more-link {
   display: block;
   text-decoration: underline 1px;
-  text-underline-offset: 2px;
+  text-underline-offset: 4px;
   font-size: 20px;
-  margin-top: 30px;
-  margin-left: 40px;
+  margin: 30px 0 0 40px;
 }
 
 .about {
