--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,10 @@
   height: 757px;
   color: #fff;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 165px 50px 50px;
   text-transform: uppercase;
   margin: 0 0 180px;
 }
@@ -84,7 +88,6 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
-  padding: 165px 50px 135px;
   font-size: 100px;
   font-weight: bold;
   letter-spacing: 30px;
@@ -95,11 +98,11 @@
 }
 
 .aligned-text_center {
-  text-align: center;  
+  text-align: center;
 }
 
 .aligned-text_right {
-  text-align: end; 
+  text-align: end;
 }
 
 .line-hight-high {
@@ -124,7 +127,6 @@
   flex-direction: row-reverse;
   align-items: center;
   column-gap: 78px;
-  padding: 0 50px 0 0;
 }
 
 .cover__description-text {
@@ -134,7 +136,7 @@
 }
 
 .bet-button {
-  background: none;
+  background: transparent;
   border: 1px solid #fff;
   color: inherit;
   text-transform: uppercase;
