About fixes: replace grid with flex

--- a/styles/style.css
+++ b/styles/style.css
@@ -221,51 +221,49 @@
   margin: 30px 0 0 40px;
 }
 
+/* About styles */
+
 .about {
   margin: 0 50px 180px;
-  display: grid;
-  grid-template-columns: 430px 1fr;
-  grid-template-rows: repeat(3, auto);
+  display: flex;
   column-gap: 25px;
 }
 
 .about__logo {
-  grid-column: 1 / span 1;
-  grid-row: 1 / span 1;
+  align-self: flex-start;
+  flex-shrink: 0;
   background-color: #000;
+  border-radius: 120px;
   width: 240px;
   height: 240px;
+  margin: 0 95px;
   padding: 63px 46px;
-  border-radius: 120px;
-  justify-self: center;
 }
 
 .about__logo-img {
   /* Не использовала */
 }
 
+.about__column {
+  /* Не использовала */
+}
+
 .about__title {
-  grid-column: 2 / span 1;
-  grid-row: 1 / span 1;
-  align-self: center;
   font-size: 40px;
   text-transform: uppercase;
+  margin: 100px 0;
 }
 
 .about__text {
   font-size: 20px;
-}
-
-.first {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
   margin-bottom: 25px;
 }
 
-.second {  
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
+.about__text:last-of-type {
+  margin-bottom: 0;
 }
+
+/* Footer styles */
 
 .footer {
   display: flex;
