--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-template: auto / 1fr auto 1fr;
   height: 109px;
-  margin: 92px 49px 92px 51px; /* Взято из макета. Уточнить с дизайнером ассиметрию справа и слева: идея или ошибка. Оставила для Pixel Perfect. */
+  margin: 92px 50px;
   font-size: 18px;
 }
 
@@ -47,7 +47,6 @@
 
 .address {
   width: 240px;
-  margin-top: 5px;
   font-style: normal;
   line-height: 135%;
 }
@@ -57,6 +56,7 @@
 }
 
 .header__address {
+  margin-top: 5px;
   justify-self: flex-end;
 }
 
@@ -130,8 +130,8 @@
 }
 
 .cover__description-text {
-  font-weight: normal;
   font-size: 22px;
+  font-weight: normal;
   word-spacing: 18px;
 }
 
@@ -147,7 +147,8 @@
 /* Lots styles */
 
 .lots {
-  margin: 0 50px 181px;
+  margin: 0 50px 180px;
+  font-size: 20px;
 }
 
 .lots__heading {
@@ -168,8 +169,8 @@
 .lots__card-list-item {
   display: block;
   width: 430px;
-  flex-grow: 1;
   min-height: 450px;
+  flex-grow: 1;
 }
 
 .card-link {
@@ -210,14 +211,12 @@
 
 .card__text {
   position: relative;
-  font-size: 20px;
 }
 
 .lots__look-more-link {
   display: block;
   text-decoration: underline 1px;
   text-underline-offset: 4px;
-  font-size: 20px;
   margin: 30px 0 0 40px;
 }
 
