--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,17 @@
+/* Common Elements */
+
+.address {
+  width: 240px;
+  font-style: normal;
+  line-height: 135%;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  inset: 0;
+}
+
 /* Header Styles */
 
 .header {
@@ -41,12 +55,6 @@
   height: 105px;
 }
 
-.address {
-  width: 240px;
-  font-style: normal;
-  line-height: 135%;
-}
-
 .address a {
   text-underline-offset: 4px;
 }
@@ -73,14 +81,9 @@
   margin: 0 0 180px;
 }
 
-.overlay {
-  background-color: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  inset: 0;
-}
-
 .cover__title {
   position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   row-gap: 20px;
@@ -119,6 +122,7 @@
 
 .cover__description {
   position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
@@ -199,6 +203,7 @@
 
 .card__title {
   position: relative;
+  z-index: 1;
   font-size: 22px;
   text-transform: uppercase;
   text-decoration: underline 1px;
@@ -207,6 +212,7 @@
 
 .card__text {
   position: relative;
+  z-index: 1;
 }
 
 .lots__look-more-link {
