--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
   line-height: 135%;
 }
 
+.address-link {
+  display: block;
+  text-underline-offset: 4px;
+}
+
 .overlay {
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
@@ -53,10 +58,6 @@
   display: block;
   width: 148px;
   height: 105px;
-}
-
-.address a {
-  text-underline-offset: 4px;
 }
 
 .header__address {
