--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
 .header {
   display: grid;
   grid-template: auto / 1fr auto 1fr;
-  height: 109px;
+  min-height: 109px;
   margin: 92px 50px;
   font-size: 18px;
 }
