Fix Cover: remove cover height restriction, replace h2 with p, place the card background size as a card rule, add cursor pointer on button hover

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 757px;
+  min-height: 757px;
   color: #fff;
   position: relative;
   display: flex;
@@ -145,6 +145,10 @@
   font-size: 22px;
 }
 
+.bet-button:hover {
+  cursor: pointer;
+}
+
 /* Lots styles */
 
 .lots {
@@ -181,6 +185,7 @@
 .card {
   height: 100%;
   position: relative;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -189,17 +194,14 @@
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
 }
 
 .card__title {
